# Algorithms

./: CMakeLists.txt  main.cpp
ASD/: LAB2.cpp  asdpractice1.cpp
ASD/LAB1/: LAB1_edited.cpp
LAB1/: LAB1.cpp  LAB1_last_save.cpp  input
LAB2/: LAB2.cpp
LAB2/src/file_work/: file_work.cpp  file_work.h
LAB2/src/sorts/: sorts.cpp  sorts.h
LAB2/src/structs/: structs.h
LAB2/static/in/: TEST  input_10000.txt
LAB3/: LAB3.cpp
LAB3/src/search/: search.cpp  search.hpp
LAB3/src/struct/: struct.h
